--- a/technologie-sieciowe-laboratorium/lab5/lab5.tex
+++ b/technologie-sieciowe-laboratorium/lab5/lab5.tex
@@ -77,7 +77,7 @@ Na Rysunku \ref{fig:adhocpass} przedstawiona została konfiguracja zabezpieczeni
 
 \section{Sieć typu infrastrukturalnego} % (fold)
 \paragraph{} % (fold)
-Konfiguracja podstawowych parametrów sieci bezprzewodowej w routerze Linksys WRT 150 jest prosta i intuicyjna. Wystarczy połączyć się z urządzeniem za pomocą kabla ethernetowego i ustawić podstawowe parametry, lub zkorzystać z ustawień predefiniowanych.
+Konfiguracja podstawowych parametrów sieci bezprzewodowej w routerze Linksys WRT 150 jest prosta i intuicyjna. Wystarczy połączyć się z urządzeniem za pomocą kabla ethernetowego i ustawić podstawowe parametry, lub skorzystać z ustawień predefiniowanych.
 
 \paragraph{}
 W celu połączenia się z siecią bezprzewodową należy podać prawidłową nazwę SSID.
@@ -163,7 +163,7 @@ Wykorzystanie szyfrowania nie ma znaczącego wpływu na szybkość transmisji, p
 % paragraph  (end)
 \paragraph{} % (fold)
 \label{par:}
-Rzeczywista prędkość transmisji jest niższa niż podana w standardzie, ponieważ zwiększenei ruchu sieciowego zwiększa również liczbę kolizji, a w rezultacie retransmisję pakietów. Gdy nie ma odpowiedzi od odbiorcy o otrzymaniu pakietu, następuje jego retransmisja. Czynnikami pogorszającymi prędkość transmisji są również odległośc od punktu dostępowego czy występowanie fizycznych przeszkód (ściany, drzwi), ilość stacji roboczych - im więcej, tym wiecej kolizji w sieci.
+Rzeczywista prędkość transmisji jest niższa niż podana w standardzie, ponieważ zwiększenie ruchu sieciowego zwiększa również liczbę kolizji, a w rezultacie retransmisję pakietów. Gdy nie ma odpowiedzi od odbiorcy o otrzymaniu pakietu, następuje jego retransmisja. Czynnikami pogorszającymi prędkość transmisji są również odległośc od punktu dostępowego czy występowanie fizycznych przeszkód (ściany, drzwi), ilość stacji roboczych - im więcej, tym wiecej kolizji w sieci.
 
 \paragraph{} % (fold)
 \label{par:}
@@ -172,7 +172,7 @@ Standard WiFi umożliwia transmisję na 14 różnych kanałach, lecz w Polsce wy
 
 \section{Wnioski} % (fold)
 \label{sec:wnioski}
-KOnfiguracja sieci bezprzewodowej przy użyciu współczesnych urządzeń nie jest skomplikowanym procesem. Dlatego na potrzeby stworzenia sieci domowej utworzenie sieci bezprzewodowej jest możliwe dla osób nieposiadająch specjalistycznej wiedzy z tego zakresu.
+Konfiguracja sieci bezprzewodowej przy użyciu współczesnych urządzeń nie jest skomplikowanym procesem. Dlatego na potrzeby sieci domowej utworzenie sieci bezprzewodowej jest możliwe dla osób nieposiadająch specjalistycznej wiedzy z tego zakresu.
 % section wnioski (end)
 
 \end{document}
