--- a/urzadzenia-peryferyjne/lab6/spr/lab6.tex
+++ b/urzadzenia-peryferyjne/lab6/spr/lab6.tex
@@ -58,7 +58,7 @@ Poza samym zeskanowaniem obrazu, udało nam sie również zmeiniać podstawowe p
 DPI (dots per inch) - liczba plamek przypadająca na cal, używane jako miara rozdzielczości drukarek, ploterów, skanerów itp. 
 \paragraph{} % (fold)
 \label{par:}
-Najczęściej używa się rozdzielczości 75 dpi (skanowanie tekstu, rozdzielczość obrazków umieszczanych w Internecie) bądź 300 dpi (typowe skanowanie obrazków). Tradycyjne klisze fotograficzne mają rozdzielczość do 3000 dpi.
+Najczęściej używa się rozdzielczości 72 dpi (skanowanie tekstu, rozdzielczość obrazków umieszczanych w Internecie) bądź 300 dpi (typowe skanowanie obrazków). Drukarka atramentowa ma od 300 do 600 dpi, a laserowa 600 - 1800. 
 % paragraph  (end)
 
 \paragraph{} % (fold)
