--- a/pea-projekt/projekt3/projekt3.tex
+++ b/pea-projekt/projekt3/projekt3.tex
@@ -82,7 +82,9 @@ Przebieg algorytmu :
     \paragraph{}
     gdzie :
     \begin{itemize}
-        \item TODO
+        \item F - funkcja kosztu/celu
+        \item M - prawdopodobieństwo mutacji
+        
     \end{itemize}
 \newpage
 \section{Implementacja}
