--- a/pea-projekt/projekt3/projekt3.tex
+++ b/pea-projekt/projekt3/projekt3.tex
@@ -6,6 +6,8 @@
 \usepackage[table]{xcolor}
 \usepackage{graphicx,pdflscape}
 \usepackage{placeins}
+\usepackage{slashbox}
+
 
 \title{Projektowanie efektywnych algorytmów}
 \author{Tymon Tobolski (181037)\\ Jacek Wieczorek (181043)}
@@ -84,7 +86,7 @@ Przebieg algorytmu :
     \begin{itemize}
         \item F - funkcja kosztu/celu
         \item M - prawdopodobieństwo mutacji
-        
+
     \end{itemize}
 \newpage
 \section{Implementacja}
@@ -133,6 +135,61 @@ gdzie : \\
   \item $m$ - ilość instancji danego problemu
 \end{itemize}
 \paragraph{}
+
+
+\begin{table}
+    \begin{tabular}{|c|c|c|c|c|}
+        \hline
+        \backslashbox{$I$}{$k$} & 50 & 100 & 150 & 200 \\ \hline
+        40 & 108.04 & 57.86 & 38.76 & 26.19 \\ \hline
+        50 & 928.76 & 212.16 & 92.89 & 69.96 \\ \hline
+        100 & 2,535.24 & 1,682.69 & 1,133.71 & 859.94 \\
+        \hline
+    \end{tabular}
+    \caption{Diff, n=100}
+\end{table}
+
+\begin{table}
+    \begin{tabular}{|c|c|c|c|c|}
+        \hline
+        \backslashbox{$I$}{$k$} & 50 & 100 & 150 & 200\\ \hline
+        40 & 10.99 & 2.59 & 2.53 & 1.44\\ \hline
+        50 & 14.33 & 9.17 & 2.14 & 48.89\\ \hline
+        100 & 378.84 & 87.50 & 46.63 & 39.68\\
+        \hline
+    \end{tabular}
+    \caption{Diff, n=1000}
+\end{table}
+
+
+
+
+\begin{table}
+    \begin{tabular}{|c|c|c|c|}
+        \hline
+        \backslashbox{$k$}{$I$} & 40 & 50 & 100\\ \hline
+50 & 136.45 & 219.75 & 497.38\\ \hline
+100 & 261.98 & 391.01 & 918.89\\ \hline
+150 & 409.4 & 598.76 & 1394.21\\ \hline
+200 & 572.62 & 908.32 & 1847.48\\
+        \hline
+    \end{tabular}
+    \caption{Time, n=100}
+\end{table}
+
+\begin{table}
+    \begin{tabular}{|c|c|c|c|}
+        \hline
+        \backslashbox{$k$}{$I$} & 40 & 50 & 100\\ \hline
+50 & 1285.72 & 1904.94 & 4428.43\\ \hline
+100 & 2492.99 & 3706.92 & 9026.62\\ \hline
+150 & 3713.95 & 5595.2 & 13981.76\\ \hline
+200 & 4954.24 & 7452.48 & 18717\\
+        \hline
+    \end{tabular}
+    \caption{Time, n=1000}
+\end{table}
+
 
 
 \newpage
