--- a/pea-projekt/projekt3/projekt3.tex
+++ b/pea-projekt/projekt3/projekt3.tex
@@ -116,7 +116,7 @@ Jezykiem implementacji algorytmu jest $Scala$ w wersji $2.9.1$ działająca na $
 
 \section{Testy}
 \paragraph{}
-Test algorytmu tabu search przeprowadzony został dla trzech zestawów testów o różnej ilośći zadań, każdy składający się ze 125 instancji.
+Test algorytmu genetycznego przeprowadzony został dla trzech zestawów testów o różnej ilośći zadań, każdy składający się ze 125 instancji.
 
 \paragraph{}
 Jako wyniki testów przedstawiamy średni czas liczenia wszystkich instancji dla danego rozmiaru problemu - $\bar{t}$, a także średni błąd wzgledny  rozwiązań dla każdej instancji - $\bar{x}$. Według wzoru : \\
@@ -272,7 +272,7 @@ TODO
 \end{landscape}
 
 
-\subsection{Porównanie średniego czasu algorytmów}
+\subsection{Porównanie różnicy wyników algorytmów}
 \begin{center}
     \begin{longtable}{|c|c|c|c|}
         \hline
