--- a/pea-projekt/projekt3/projekt3.tex
+++ b/pea-projekt/projekt3/projekt3.tex
@@ -138,18 +138,19 @@ gdzie : \\
 \begin{center}
     \begin{longtable}{|c|c|c|c|c|}
         \hline
-        \backslashbox{$I$}{$k$} & 50 & 100 & 150 & 200 \\ \hline
-        40 & 108.04 & 57.86 & 38.76 & 26.19 \\ \hline
-        50 & 928.76 & 212.16 & 92.89 & 69.96 \\ \hline
-        100 & 2,535.24 & 1,682.69 & 1,133.71 & 859.94 \\ \hline
-        \caption{Diff, n=100}
+        \backslashbox{$k$}{$m$} & 40 & 50 & 100\\ \hline
+        50 & 108,04 & 928,76 & 2 535,24 \\ \hline
+        100 & 57,86 & 212,16 & 1 682,69 \\ \hline
+        150 & 38,76 & 92,89 & 1 133,71 \\ \hline
+        200 & 26,19 & 69,96 & 859,94 \\ \hline
+        \caption{Diff, $n = 100$}
      \end{longtable}
 \end{center}
 
 \begin{figure}[htbp]
   \begin{center}
          \includegraphics[scale = 0.7]{img/GA_diff_100.PNG}
-         \caption{Diff, n=100}
+         \caption{Diff, $n = 100$}
   \end{center}
 \end{figure}
 
@@ -159,19 +160,19 @@ gdzie : \\
 \begin{center}
     \begin{longtable}{|c|c|c|c|c|}
         \hline
-        \backslashbox{$I$}{$k$} & 50 & 100 & 150 & 200\\ \hline
-        40 & 10.99 & 2.59 & 2.53 & 1.44\\ \hline
-        50 & 14.33 & 9.17 & 2.14 & 48.89\\ \hline
-        100 & 378.84 & 87.50 & 46.63 & 39.68\\
-        \hline
-        \caption{Diff, n=1000}
+        \backslashbox{$k$}{$m$} & 40 & 50 & 100\\ \hline
+        50 & 10,99 & 14,33 & 378,84 \\ \hline
+        100 & 2,59 & 9,17 & 87,50 \\ \hline
+        150 & 2,53 & 2,14 & 46,63 \\ \hline
+        200 & 1,44 & 48,89 & 39,68 \\ \hline
+        \caption{Diff, $n = 1000$}
     \end{longtable}
 \end{center}
 
 \begin{figure}[htbp]
   \begin{center}
          \includegraphics[scale = 0.7]{img/GA_diff_1000.PNG}
-         \caption{Diff, n=1000}
+         \caption{Diff, $n = 1000$}
   \end{center}
 \end{figure}
 
@@ -181,19 +182,19 @@ gdzie : \\
     \begin{longtable}{|c|c|c|c|}
         \hline
         \backslashbox{$k$}{$I$} & 40 & 50 & 100\\ \hline
-            50 & 136.45 & 219.75 & 497.38\\ \hline
-            100 & 261.98 & 391.01 & 918.89\\ \hline
-            150 & 409.4 & 598.76 & 1394.21\\ \hline
-            200 & 572.62 & 908.32 & 1847.48\\ \hline
+            50 & 136,45 & 219,75 & 497,38\\ \hline
+            100 & 261,98 & 391,01 & 918,89\\ \hline
+            150 & 409,40 & 598,76 & 1 394,21\\ \hline
+            200 & 572,62 & 908,32 & 1 847,48\\ \hline
 
-        \caption{Time, n=100}
+        \caption{Time, $n = 100$}
     \end{longtable}
 \end{center}
 
 \begin{figure}[htbp]
   \begin{center}
          \includegraphics[scale = 0.7]{img/GA_n_100.PNG}
-         \caption{Time, n=100}
+         \caption{Time, $n = 100$}
   \end{center}
 \end{figure}
 
@@ -204,20 +205,20 @@ gdzie : \\
     \begin{longtable}{|c|c|c|c|}
         \hline
         \backslashbox{$k$}{$I$} & 40 & 50 & 100\\ \hline
-            50 & 1285.72 & 1904.94 & 4428.43\\ \hline
-            100 & 2492.99 & 3706.92 & 9026.62\\ \hline
-            150 & 3713.95 & 5595.2 & 13981.76\\ \hline
-            200 & 4954.24 & 7452.48 & 18717\\
+            50 & 1 285,72 & 1 904,94 & 4 428,43\\ \hline
+            100 & 2 492,99 & 3 706,92 & 9 026,62\\ \hline
+            150 & 3 713,95 & 5 595,20 & 13 981,76\\ \hline
+            200 & 4 954,24 & 7 452,48 & 18 717,00\\
         \hline
-        \caption{Time, n=1000}
+        \caption{Time, $n = 1000$}
     \end{longtable}
-    
+
 \end{center}
 
 \begin{figure}[htbp]
   \begin{center}
          \includegraphics[scale = 0.7]{img/GA_n_1000.PNG}
-         \caption{Time, n=1000}
+         \caption{Time, $n = 1000$}
   \end{center}
 \end{figure}
 
@@ -240,26 +241,26 @@ TODO
         Alg & 40 & 50 & 100 \\ \hline
         G(k=50, n=100) & 136,45 & 219,75 & 497,38\\ \hline
         G(k=100, n=100)& 261,98 & 391,01 & 918,89\\ \hline
-        G(k=150, n=100)& 409,4 &  598,76 & 1394,21\\ \hline
-        G(k=200, n=100)& 572,62 & 908,32 & 1847,48\\ \hline
-        G(k=50, n=1000)& 1285,72& 1904,94& 4428,43\\ \hline
-        G(k=100, n=1000)  &  2492,99 &3706,92& 9026,62\\ \hline
-        G(k=150, n=1000)   & 3713,95 &5595,2  &13981,76\\ \hline
-        G(k=200, n=1000)   & 4954,24& 7452,48& 18717\\ \hline
+        G(k=150, n=100)& 409,40 &  598,76 & 1 394,21\\ \hline
+        G(k=200, n=100)& 572,62 & 908,32 & 1 847,48\\ \hline
+        G(k=50, n=1000)& 1 285,72& 1 904,94& 4 428,43\\ \hline
+        G(k=100, n=1000)  &  2 492,99 &3 706,92& 9 026,62\\ \hline
+        G(k=150, n=1000)   & 3 713,95 &5 595,2  &13 981,76\\ \hline
+        G(k=200, n=1000)   & 4 954,24& 7 452,48& 18 717,00\\ \hline
         TS(n=10, k=4, t=7) & 23,11 &  46,81 &  333,83\\ \hline
         TS(n=10, k=5, t=7) & 25,96 &  50,96 &  368,84\\ \hline
         TS(n=10, k=6, t=7) & 26,23 &  39,14 &  327,85\\ \hline
         TS(n=10, k=7, t=7) & 19,42  & 38,48  & 314,94\\ \hline
-        TS(n=100, k=4, t=7)& 188,06 & 378,68 & 3028,87\\ \hline
-        TS(n=100, k=5, t=7)& 208,98 & 375,12 & 3009,74\\ \hline
-        TS(n=100, k=6, t=7)& 206,57 & 382,79 & 3004,64\\ \hline
-        TS(n=100, k=7, t=7) &185,13  &387,76 & 3003,1\\ \hline
+        TS(n=100, k=4, t=7)& 188,06 & 378,68 & 3 028,87\\ \hline
+        TS(n=100, k=5, t=7)& 208,98 & 375,12 & 3 009,74\\ \hline
+        TS(n=100, k=6, t=7)& 206,57 & 382,79 & 3 004,64\\ \hline
+        TS(n=100, k=7, t=7) &185,13  &387,76 & 3 003,10\\ \hline
         SA(0,990000)  &  1,89  &  2,01 &   3,09\\ \hline
         SA(0,999000)  &  15,88 &  18,74 &  30,36\\ \hline
         SA(0,999900)  &  167,36 & 189,63 & 305,09\\ \hline
                 \caption{Średni czas}
     \end{longtable}
-    
+
 \end{center}
 
 \begin{landscape}
@@ -298,7 +299,7 @@ TODO
         SA(0,999900)  &  0,11  &  0,01 &   0,57\\ \hline
                 \caption{Różnica}
     \end{longtable}
-    
+
 \end{center}
 
 \begin{landscape}
