--- a/pea-projekt/projekt3/projekt3.tex
+++ b/pea-projekt/projekt3/projekt3.tex
@@ -181,7 +181,7 @@ gdzie : \\
 \begin{center}
     \begin{longtable}{|c|c|c|c|}
         \hline
-        \backslashbox{$k$}{$I$} & 40 & 50 & 100\\ \hline
+        \backslashbox{$k$}{$m$} & 40 & 50 & 100\\ \hline
             50 & 136,45 & 219,75 & 497,38\\ \hline
             100 & 261,98 & 391,01 & 918,89\\ \hline
             150 & 409,40 & 598,76 & 1 394,21\\ \hline
@@ -204,7 +204,7 @@ gdzie : \\
 \begin{center}
     \begin{longtable}{|c|c|c|c|}
         \hline
-        \backslashbox{$k$}{$I$} & 40 & 50 & 100\\ \hline
+        \backslashbox{$k$}{$m$} & 40 & 50 & 100\\ \hline
             50 & 1 285,72 & 1 904,94 & 4 428,43\\ \hline
             100 & 2 492,99 & 3 706,92 & 9 026,62\\ \hline
             150 & 3 713,95 & 5 595,20 & 13 981,76\\ \hline
