--- a/pea-projekt/projekt3/projekt3.tex
+++ b/pea-projekt/projekt3/projekt3.tex
@@ -229,6 +229,9 @@ gdzie : \\
 \paragraph{}
 Po przeprowadzeniu analizy wyników testów, jednoznacznie widać, że rozmiar instancji ma znaczący wpływ na czas działania algorytmu. Znaczną część czasu wykonywania algorytmu zajmuje obliczanie funkcji kosztu, której czas jest zależny od rozmiaru instancji. Głównym parametrem, od którego zależna jest dokładność wyniku, a co za tym idzie czas dochodzenia do rozwiązania jest parametr $n$, określający ilość iteracji. Ważnym parametrem jest również $k$ - wielkość populacji. Odpowiednio dobrane parametry wraz z czynnikiem losowym (mutacja) pozwalają uzyskać zadowalające wyniki.
 
+\paragraph{}
+Algorytm genetyczny pozwala na znalezienie przybliżonego rozwiązania problemu $sNPh$. Wiąże się to jednak z koniecznością dobrania odpowiednich parametrów, co nie jest zadaniem łatwym, a także z wybraniem odpowiedniego sposobu krzyżowania populacji. W miarę poprawy wyników poprzez dobierane parametry, wzrasta czas wykonania algorytmu. W celu obliczenia problemu, musimy odpowiedzieć sobie na pytanie, jak dokładne rozwiązanie nas interesuje i ile czasu możemy na nie poświęcić.
+
 \newpage
 \section{Porównanie}
 \paragraph{} % (fold)
