--- a/pea-projekt/projekt3/projekt3.tex
+++ b/pea-projekt/projekt3/projekt3.tex
@@ -235,8 +235,10 @@ Algorytm genetyczny pozwala na znalezienie przybliżonego rozwiązania problemu 
 \newpage
 \section{Porównanie}
 \paragraph{} % (fold)
+Ostatnim etapem projektu jest porównanie algorytmów symulowanego wyżarzania, tabu search oraz algorytmu genetycznego pod względem dokładności otrzymanych wyników oraz czasu wynonywania.
+
 \label{par:}
-\subsection{Porównanie średniego czasu algorytmów}
+\subsection{Porównanie średniego czasu wykonywania algorytmów}
 \begin{center}
     \begin{longtable}{|c|c|c|c|}
         \hline
@@ -260,9 +262,8 @@ Algorytm genetyczny pozwala na znalezienie przybliżonego rozwiązania problemu 
         SA(0,990000)  &  1,89  &  2,01 &   3,09\\ \hline
         SA(0,999000)  &  15,88 &  18,74 &  30,36\\ \hline
         SA(0,999900)  &  167,36 & 189,63 & 305,09\\ \hline
-                \caption{Średni czas}
+        \caption{Średni czas wykonywania algorytmów}
     \end{longtable}
-
 \end{center}
 
 \begin{landscape}
@@ -275,7 +276,7 @@ Algorytm genetyczny pozwala na znalezienie przybliżonego rozwiązania problemu 
 \end{landscape}
 
 
-\subsection{Porównanie różnicy wyników algorytmów}
+\subsection{Porównanie dokładności otrzymanych wyników}
 \begin{center}
     \begin{longtable}{|c|c|c|c|}
         \hline
@@ -299,7 +300,7 @@ Algorytm genetyczny pozwala na znalezienie przybliżonego rozwiązania problemu 
         SA(0,990000)  &  8,07   & 15,77 &  337,97\\ \hline
         SA(0,999000)  &  0,16  &  0,55  &  9,93\\ \hline
         SA(0,999900)  &  0,11  &  0,01 &   0,57\\ \hline
-                \caption{Różnica}
+        \caption{Dokładnośc wyników wyrażona w prcentach}
     \end{longtable}
 
 \end{center}
@@ -312,6 +313,9 @@ Algorytm genetyczny pozwala na znalezienie przybliżonego rozwiązania problemu 
   \end{center}
 \end{figure}
 \end{landscape}
+
+\paragraph{}
+TODO
 
 \begin{landscape}
 \begin{figure}[htbp]
