--- a/pea-projekt/projekt3/projekt3.tex
+++ b/pea-projekt/projekt3/projekt3.tex
@@ -314,9 +314,6 @@ Ostatnim etapem projektu jest porównanie algorytmów symulowanego wyżarzania, 
 \end{figure}
 \end{landscape}
 
-\paragraph{}
-TODO
-
 \begin{landscape}
 \begin{figure}[htbp]
   \begin{center}
@@ -334,6 +331,15 @@ TODO
   \end{center}
 \end{figure}
 \end{landscape}
+
+
+\paragraph{}
+Po przprowadzeniu analizy testów zarówno czasu wykonywania algorytmów jak i różnicy od wartości optymalnej najlepszym algorytmem okazują się algorytm symulowanego wyżarzania. Nie tylko uzyskał on wyniki najbardziej zbliżone do optymalnych w najkrótszym czasie, ale jest także najprostszym algorytmem w implementacji spośród omawianych.
+
+\paragraph{}
+Algorytmy tabu search i genetyczne, mimo iż cieszą się wiekszy uznaniem, wiążą się z dobraniem szeregu parametrów, od których zalezy jakość rozwiązania. Nie jest to zadanie trywialne i wymaga od programisty przeprowadzenia szeregu testów na optymalność wyniku. Są również podatne na "utknięcie" w lokalnym minimum, dlatego należy zadbać o odpowiednią metodę dywersyfikacji rozwiązań.
+
+
 \end{document}
 
 
