--- a/pea-projekt/projekt3/projekt3.tex
+++ b/pea-projekt/projekt3/projekt3.tex
@@ -339,6 +339,8 @@ Po przprowadzeniu analizy testów zarówno czasu wykonywania algorytmów jak i r
 \paragraph{}
 Algorytmy tabu search i genetyczne, mimo iż cieszą się wiekszy uznaniem, wiążą się z dobraniem szeregu parametrów, od których zalezy jakość rozwiązania. Nie jest to zadanie trywialne i wymaga od programisty przeprowadzenia szeregu testów na optymalność wyniku. Są również podatne na "utknięcie" w lokalnym minimum, dlatego należy zadbać o odpowiednią metodę dywersyfikacji rozwiązań.
 
+\paragraph{}
+Spośród przedstawionych algorytmów, algorytm symulowanego wyżarzania najlepiej sprawdzi się w sytuacji kiedy rozwiązani danego problemu jest potrzebne w krótkim czasie, a duża dokładności wyników nie jest wymagana. W przeciwnym wypadku należy przeprowadzić bardziej dogłębne badania nad doborem parametrów i metody wyznaczania sąsiedztwa lub krzyżowania osobników dla algorytmów genetycznych oraz tabu search.
 
 \end{document}
 
